# react-native-pdf-viewer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  react-native-pdf-light.podspec  react-native-pdf-viewer.podspec  react-native.config.js  tsconfig.json
.github/workflows/: node.js.yml
Zoom/: package.json
android/: CMakeLists.txt  build.gradle  gradle.properties  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/alpha0010/: PdfUtilModule.kt  PdfView.kt  PdfViewManager.kt  PdfViewModule.kt  PdfViewPackage.kt  PdfViewShadowNode.kt
android/src/main/java/com/alpha0010/pdf/: AnnotationPage.kt  PdfUtilModule.kt  PdfView.kt  PdfViewManager.kt  PdfViewPackage.kt  PdfViewShadowNode.kt
cpp/: PdfViewComponentDescriptor.cpp  PdfViewShadowNode.cpp  PdfViewShadowNode.h  PdfViewState.cpp  PdfViewState.h
example/: app.json  package.json  react-native.config.js
example/android/: build.gradle  settings.gradle
example/ios/: File.swift  Podfile
example/src/: App.tsx
ios/: AnnotationPage.swift  AnnotationView.swift  PdfUtilModule.h  PdfUtilModule.m  PdfUtilModule.mm  PdfUtilModule.swift  PdfView-Bridging-Header.h  PdfView.h  PdfView.m  PdfView.mm  PdfView.swift  PdfViewManager.m  PdfViewManager.swift  PdfViewShadowNode.swift  PdfViewer.m  PdfViewer.swift
ios/PdfView.xcodeproj/: project.pbxproj
src/: NativePdfUtil.ts  Pdf.tsx  PdfUtil.ts  PdfView.ts  PdfView.tsx  PdfViewNativeComponent.ts  Util.ts  ZoomPdfView.tsx  index.ts  index.tsx
src/__mocks__/: PdfUtil.ts
types/: react-native-gesture-handler.d.ts
(+28 files in other folders)
